media: Add Media.EME.MediaCryptoAvailable UMA

Bug: 840586
Change-Id: I0d91bde150d6e3755df3a3577862149298eaa61f
Reviewed-on: https://chromium-review.googlesource.com/1050934
Reviewed-by: Frank Liberato <liberato@chromium.org>
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Commit-Queue: Xiaohan Wang <xhwang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557469}